implemented DLX algorithm. Fails some hard tests. passes all very easy/easy/medium. Need to find why algo fails

--- a/sudoku.ipynb
+++ b/sudoku.ipynb
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -134,7 +134,16 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (3513177512.py, line 155)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[19], line 155\u001b[1;36m\u001b[0m\n\u001b[1;33m    for i in column.down, i != column, i = i.down:\u001b[0m\n\u001b[1;37m                                         ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "###################################################################################################\n",
     "### PRE-PROCESSING\n",
@@ -225,31 +234,133 @@
     "###################################################################################################\n",
     "### DANCING LINKS\n",
     "\n",
-    "class DancingNode:\n",
-    "    # Implementation of a node in the Dancing Links structure\n",
-    "    pass\n",
+    "def sudoku_to_exact_cover(sudoku):\n",
+    "    N = 9\n",
+    "    N2 = N*N\n",
+    "    N4 = N2*4\n",
     "\n",
-    "class ColumnNode(DancingNode):\n",
-    "    # Specialized node for column headers\n",
-    "    pass\n",
+    "    # Initialize the exact cover matrix with zeros.\n",
+    "    # There are 729 (9*9*9) rows for each possible assignment of a number (1-9) to a cell.\n",
+    "    # There are 324 (4*9*9) columns for each constraint: cell, row, column, and box constraints.\n",
+    "    cover_matrix = np.zeros((N2*N, N4), dtype=int)\n",
+    "\n",
+    "    # Helper function to calculate box index\n",
+    "    def box_index(row, col):\n",
+    "        return (row // 3) * 3 + col // 3\n",
+    "\n",
+    "    row = 0\n",
+    "    for r in range(N):  # For each row in the Sudoku\n",
+    "        for c in range(N):  # For each column in the Sudoku\n",
+    "            for n in range(1, N+1):  # For each number\n",
+    "                if sudoku[r, c] == 0 or sudoku[r, c] == n:\n",
+    "                    # Calculate positions in the cover matrix\n",
+    "                    cell_constraint = r*N + c\n",
+    "                    row_constraint = N2 + r*N + (n-1)\n",
+    "                    col_constraint = 2*N2 + c*N + (n-1)\n",
+    "                    box_constraint = 3*N2 + box_index(r, c)*N + (n-1)\n",
+    "                    \n",
+    "                    # Set the corresponding entries to 1\n",
+    "                    cover_matrix[row, cell_constraint] = 1\n",
+    "                    cover_matrix[row, row_constraint] = 1\n",
+    "                    cover_matrix[row, col_constraint] = 1\n",
+    "                    cover_matrix[row, box_constraint] = 1\n",
+    "                    row += 1\n",
+    "\n",
+    "    return cover_matrix\n",
+    "\n",
+    "##########\n",
+    "\n",
+    "class Node:\n",
+    "    def __init__(self):\n",
+    "        self.left = self.right = self.up = self.down = self.column = self\n",
+    "\n",
+    "class ColumnNode(Node):\n",
+    "    def __init__(self, name):\n",
+    "        super().__init__()\n",
+    "        self.name = name\n",
+    "        self.size = 0\n",
     "\n",
     "def cover(column):\n",
-    "    # \"Covers\" a column: removes it from the header list and removes all rows in its column\n",
-    "    pass\n",
+    "    \"\"\"Remove column from the header and remove all rows in its column.\"\"\"\n",
+    "    column.right.left = column.left\n",
+    "    column.left.right = column.right\n",
+    "    i = column.down\n",
+    "    while i != column:\n",
+    "        j = i.right\n",
+    "        while j != i:\n",
+    "            j.down.up = j.up\n",
+    "            j.up.down = j.down\n",
+    "            j.column.size -= 1\n",
+    "            j = j.right\n",
+    "        i = i.down\n",
     "\n",
     "def uncover(column):\n",
-    "    # \"Uncovers\" a column: re-adds the column and all its rows\n",
-    "    pass\n",
+    "    \"\"\"Re-add column to the header and re-add all rows in its column.\"\"\"\n",
+    "    i = column.up\n",
+    "    while i != column:\n",
+    "        j = i.left\n",
+    "        while j != i:\n",
+    "            j.column.size += 1\n",
+    "            j.down.up = j\n",
+    "            j.up.down = j\n",
+    "            j = j.left\n",
+    "        i = i.up\n",
+    "    column.right.left = column\n",
+    "    column.left.right = column\n",
     "\n",
-    "def search(depth):\n",
-    "    # The recursive search function of Algorithm X with a heuristic for column selection\n",
-    "    pass\n",
+    "def search(header, solution):\n",
+    "    \"\"\"Search for a solution recursively.\"\"\"\n",
+    "    if header.right == header:\n",
+    "        # Solution found\n",
+    "        return True\n",
+    "    column = select_column(header)\n",
+    "    cover(column)\n",
+    "    r = column.down\n",
+    "    while r != column:\n",
+    "        solution.append(r)\n",
+    "        j = r.right\n",
+    "        while j != r:\n",
+    "            cover(j.column)\n",
+    "            j = j.right\n",
+    "        if search(header, solution):\n",
+    "            return True\n",
+    "        r = solution.pop()\n",
+    "        column = r.column\n",
+    "        j = r.left\n",
+    "        while j != r:\n",
+    "            uncover(j.column)\n",
+    "            j = j.left\n",
+    "        r = r.down\n",
+    "    uncover(column)\n",
+    "    return False\n",
+    "\n",
+    "def select_column(header):\n",
+    "    \"\"\"Select the column with the fewest nodes.\"\"\"\n",
+    "    best = header.right\n",
+    "    j = best.right\n",
+    "    while j != header:\n",
+    "        if j.size < best.size:\n",
+    "            best = j\n",
+    "        j = j.right\n",
+    "    return best\n",
     "\n",
     "def solve_sudoku(sudoku):\n",
-    "    # 1. Convert the Sudoku puzzle into an exact cover matrix\n",
-    "    # 2. Build the Dancing Links structure from this matrix\n",
-    "    # 3. Apply the search function to find and construct the solution\n",
-    "    pass\n",
+    "    # Step 1: Convert Sudoku to Exact Cover Problem\n",
+    "    cover_matrix = sudoku_to_exact_cover(sudoku)\n",
+    "    \n",
+    "    # Step 2: Build DLX Data Structures (conceptual; actual implementation required)\n",
+    "    dlx_header = build_dlx_structure(cover_matrix)\n",
+    "    \n",
+    "    # Step 3: Solve the Exact Cover Problem with DLX\n",
+    "    solution = []\n",
+    "    solved = search(dlx_header, solution)  # Note: 'search' needs to be implemented to work with DLX\n",
+    "    \n",
+    "    # Step 4: Translate DLX Solution Back to Sudoku (conceptual; actual mapping required)\n",
+    "    if solved:\n",
+    "        map_dlx_solution_to_sudoku(solution, sudoku)  # You'll need to implement this mapping based on your DLX structure\n",
+    "    \n",
+    "    return sudoku\n",
+    "\n",
     "\n",
     "###################################################################################################\n",
     "\n",
