Refactored DLX solver

--- a/sudoku.ipynb
+++ b/sudoku.ipynb
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 66,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -189,84 +189,88 @@
     "###################################################################################################\n",
     "### DANCING LINKS METHOD (DLX)\n",
     "\n",
-    "# Solve the Sudoku puzzle using the DLX algorithm.\n",
-    "def solve_sudoku(grid):\n",
-    "    N = 9  # Grid size\n",
-    "    grid = np.array(grid)  # Ensure the input is a NumPy array.\n",
+    "import numpy as np\n",
     "\n",
-    "    # Generate the constraint matrix required for DLX.\n",
-    "    X, Y = exact_cover(grid)\n",
+    "# Solve the Sudoku puzzle using the Dancing Links algorithm (DLX).\n",
+    "def solve_sudoku(puzzle):\n",
+    "    size = 9  # Size of the Sudoku grid\n",
+    "    puzzle = np.array(puzzle)  # Convert input to a NumPy array for easier handling.\n",
     "\n",
-    "    # Attempt to solve the Sudoku using DLX.\n",
-    "    solution_found = False\n",
-    "    for solution in solve(X, Y, []):  # Solve the exact cover problem.\n",
-    "        solution_found = True\n",
-    "        solution_grid = np.zeros((N, N), dtype=int)  # Prepare a grid to populate with the solution.\n",
-    "        for (r, c, n) in solution:  # For each value in the solution,\n",
-    "            solution_grid[r, c] = n  # Place the number in the correct cell.\n",
-    "        return solution_grid  # Return the solved grid.\n",
+    "    # Generate matrices for the Dancing Links algorithm.\n",
+    "    constraints, options = generate_matrices(puzzle)\n",
     "\n",
-    "    if not solution_found:\n",
-    "        return np.full((N, N), -1)  # If no solution is found, return a grid filled with -1.\n",
+    "    # Try to solve the Sudoku using DLX.\n",
+    "    for solution in search(constraints, options, []):\n",
+    "        # If a solution is found, prepare a grid to fill in the solution.\n",
+    "        solved_puzzle = np.zeros((size, size), dtype=int)\n",
+    "        for row, col, num in solution:\n",
+    "            solved_puzzle[row, col] = num  # Populate the grid with the solution.\n",
+    "        return solved_puzzle  # Return the solved Sudoku grid.\n",
     "\n",
-    "# Generate the constraint and options matrices for DLX.\n",
-    "def exact_cover(grid):\n",
-    "    N = 9\n",
-    "    X = dict()  # Constraints dictionary.\n",
-    "    Y = dict()  # Options dictionary, mapping partial solutions to constraints.\n",
+    "    # If no solution is found, return a grid filled with -1 to indicate failure.\n",
+    "    return np.full((size, size), -1)\n",
     "\n",
-    "    # For each cell, number, and box, if the number is not yet placed, add the constraints.\n",
-    "    for r, c, n in np.ndindex((N, N, N)):\n",
-    "        n += 1  # Adjust for 1-based indexing.\n",
-    "        b = (r // 3) * 3 + (c // 3)  # Calculate box number.\n",
-    "        if grid[r, c] == n or grid[r, c] == 0:\n",
-    "            Y[(r, c, n)] = [\n",
-    "                (\"rc\", (r, c)),  # Row-column constraint.\n",
-    "                (\"rn\", (r, n)),  # Row-number constraint.\n",
-    "                (\"cn\", (c, n)),  # Column-number constraint.\n",
-    "                (\"bn\", (b, n))]  # Box-number constraint.\n",
-    "    # Populate the constraint dictionary X.\n",
-    "    for i, row in Y.items():\n",
-    "        for j in row:\n",
-    "            if j not in X:\n",
-    "                X[j] = [i]\n",
+    "# Prepare the Dancing Links matrices based on the given Sudoku puzzle.\n",
+    "def generate_matrices(puzzle):\n",
+    "    size = 9\n",
+    "    constraints = {}  # Dictionary for constraints.\n",
+    "    options = {}  # Dictionary mapping partial solutions to their constraints.\n",
+    "\n",
+    "    # Fill the options dictionary based on the puzzle input.\n",
+    "    for row, col, num in np.ndindex((size, size, size)):\n",
+    "        num += 1  # Sudoku numbers are 1-9, not 0-8.\n",
+    "        box = (row // 3) * 3 + col // 3  # Calculate box index.\n",
+    "        if puzzle[row, col] == num or puzzle[row, col] == 0:\n",
+    "            options[(row, col, num)] = [\n",
+    "                (\"cell\", (row, col)),\n",
+    "                (\"row\", (row, num)),\n",
+    "                (\"col\", (col, num)),\n",
+    "                (\"box\", (box, num))]\n",
+    "\n",
+    "    # Fill the constraints dictionary using the options dictionary.\n",
+    "    for option, constraint_list in options.items():\n",
+    "        for constraint in constraint_list:\n",
+    "            if constraint not in constraints:\n",
+    "                constraints[constraint] = [option]\n",
     "            else:\n",
-    "                X[j].append(i)\n",
-    "    return X, Y\n",
+    "                constraints[constraint].append(option)\n",
     "\n",
-    "# Recursive search function for solving the exact cover problem using DLX.\n",
-    "def solve(X, Y, solution):\n",
-    "    if not X:  # If all constraints are satisfied, yield the solution.\n",
-    "        yield list(solution)\n",
-    "    else:  # Otherwise, choose the constraint with the fewest options and try each option.\n",
-    "        c = min(X, key=lambda c: len(X[c]))  # Choose the constraint with the fewest options.\n",
-    "        for r in list(X[c]):\n",
-    "            solution.append(r)\n",
-    "            cols = select(X, Y, r)  # Select this option and remove related constraints.\n",
-    "            for s in solve(X, Y, solution):  # Recurse with the reduced problem.\n",
-    "                yield s\n",
-    "            deselect(X, Y, r, cols)  # Backtrack: re-add the constraints removed by select.\n",
-    "            solution.pop()\n",
+    "    return constraints, options\n",
     "\n",
-    "# Select a row r in the matrix and remove all rows and columns associated with its constraints.\n",
-    "def select(X, Y, r):\n",
-    "    cols = []\n",
-    "    for j in Y[r]:  # For each column in the row,\n",
-    "        for i in X[j]:  # For each row that contains this column,\n",
-    "            for k in Y[i]:  # For each column in those rows,\n",
-    "                if k != j:\n",
-    "                    X[k].remove(i)  # Remove the row from the column.\n",
-    "        cols.append((j, X.pop(j)))  # Remove the column entirely and record it.\n",
-    "    return cols\n",
+    "# Recursive function to search for a solution using DLX.\n",
+    "def search(constraints, options, partial_solution):\n",
+    "    if not constraints:  # If all constraints are satisfied, a solution is found.\n",
+    "        yield list(partial_solution)\n",
+    "    else:\n",
+    "        # Choose the constraint with the fewest options to minimize branching.\n",
+    "        constraint = min(constraints, key=lambda k: len(constraints[k]))\n",
+    "        for option in list(constraints[constraint]):\n",
+    "            partial_solution.append(option)\n",
+    "            removed_constraints = apply_option(constraints, options, option)\n",
+    "            yield from search(constraints, options, partial_solution)\n",
+    "            remove_option(constraints, options, option, removed_constraints)\n",
+    "            partial_solution.pop()\n",
     "\n",
-    "# Re-add a previously selected row r and its associated constraints after backtracking.\n",
-    "def deselect(X, Y, r, cols):\n",
-    "    for j, column in reversed(cols):  # Re-add each column and row removed by select,\n",
-    "        X[j] = column\n",
-    "        for i in X[j]:  # For each row in the column,\n",
-    "            for k in Y[i]:  # For each column in the row,\n",
-    "                if k != j and i not in X[k]:\n",
-    "                    X[k].append(i)  # Re-add the row to the column.\n",
+    "# Apply an option, removing it and its related constraints from consideration.\n",
+    "def apply_option(constraints, options, option):\n",
+    "    removed = []\n",
+    "    for constraint in options[option]:\n",
+    "        for opt in constraints[constraint]:\n",
+    "            for constr in options[opt]:\n",
+    "                if constr != constraint:\n",
+    "                    constraints[constr].remove(opt)\n",
+    "        removed.append((constraint, constraints.pop(constraint)))\n",
+    "    return removed\n",
+    "\n",
+    "# Revert the application of an option, adding back the constraints and options.\n",
+    "def remove_option(constraints, options, option, removed):\n",
+    "    for constraint, opts in reversed(removed):\n",
+    "        constraints[constraint] = opts\n",
+    "        for opt in opts:\n",
+    "            for constr in options[opt]:\n",
+    "                if constr != constraint and opt not in constraints[constr]:\n",
+    "                    constraints[constr].append(opt)\n",
+    "\n",
     "\n",
     "\n",
     "###################################################################################################\n",
@@ -308,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +342,7 @@
       " [8 4 3 7 1 5 2 6 9]]\n",
       "Is your solution correct?\n",
       "Yes! Correct solution.\n",
-      "This sudoku took 0.015625 seconds to solve.\n",
+      "This sudoku took 0.0 seconds to solve.\n",
       "\n",
       "This is very_easy sudoku number 1\n",
       "[[0 9 3 1 5 2 6 0 8]\n",
@@ -458,7 +462,7 @@
       " [9 3 5 6 2 1 4 8 7]]\n",
       "Is your solution correct?\n",
       "Yes! Correct solution.\n",
-      "This sudoku took 0.0 seconds to solve.\n",
+      "This sudoku took 0.015625 seconds to solve.\n",
       "\n",
       "This is very_easy sudoku number 6\n",
       "[[7 5 0 0 8 6 9 2 4]\n",
@@ -482,7 +486,7 @@
       " [1 2 8 7 9 3 4 6 5]]\n",
       "Is your solution correct?\n",
       "Yes! Correct solution.\n",
-      "This sudoku took 0.015625 seconds to solve.\n",
+      "This sudoku took 0.0 seconds to solve.\n",
       "\n",
       "This is very_easy sudoku number 7\n",
       "[[4 2 5 9 6 1 8 0 7]\n",
@@ -506,7 +510,7 @@
       " [2 3 4 1 7 5 9 6 8]]\n",
       "Is your solution correct?\n",
       "Yes! Correct solution.\n",
-      "This sudoku took 0.0 seconds to solve.\n",
+      "This sudoku took 0.015625 seconds to solve.\n",
       "\n",
       "This is very_easy sudoku number 8\n",
       "[[5 7 4 6 1 3 2 9 8]\n",
@@ -602,7 +606,7 @@
       " [7 8 9 3 1 5 4 6 2]]\n",
       "Is your solution correct?\n",
       "Yes! Correct solution.\n",
-      "This sudoku took 0.015625 seconds to solve.\n",
+      "This sudoku took 0.0 seconds to solve.\n",
       "\n",
       "This is very_easy sudoku number 12\n",
       "[[9 4 7 0 8 2 1 3 5]\n",
@@ -626,7 +630,7 @@
       " [6 7 9 8 2 3 4 5 1]]\n",
       "Is your solution correct?\n",
       "Yes! Correct solution.\n",
-      "This sudoku took 0.0 seconds to solve.\n",
+      "This sudoku took 0.015625 seconds to solve.\n",
       "\n",
       "This is very_easy sudoku number 13\n",
       "[[0 9 8 3 2 4 5 7 1]\n",
@@ -650,7 +654,7 @@
       " [2 1 7 4 6 9 8 5 3]]\n",
       "Is your solution correct?\n",
       "Yes! Correct solution.\n",
-      "This sudoku took 0.015625 seconds to solve.\n",
+      "This sudoku took 0.0 seconds to solve.\n",
       "\n",
       "This is very_easy sudoku number 14\n",
       "[[5 8 0 2 6 4 7 1 9]\n",
@@ -674,7 +678,7 @@
       " [7 1 4 9 5 2 3 6 8]]\n",
       "Is your solution correct?\n",
       "Yes! Correct solution.\n",
-      "This sudoku took 0.0 seconds to solve.\n",
+      "This sudoku took 0.015625 seconds to solve.\n",
       "\n",
       "15/15 very_easy sudokus correct\n",
       "Testing easy sudokus\n",
@@ -700,7 +704,7 @@
       " [-1 -1 -1 -1 -1 -1 -1 -1 -1]]\n",
       "Is your solution correct?\n",
       "Yes! Correct solution.\n",
-      "This sudoku took 0.015625 seconds to solve.\n",
+      "This sudoku took 0.0 seconds to solve.\n",
       "\n",
       "This is easy sudoku number 1\n",
       "[[3 7 4 5 8 0 6 2 9]\n",
@@ -964,7 +968,7 @@
       " [2 3 7 8 6 9 4 5 1]]\n",
       "Is your solution correct?\n",
       "Yes! Correct solution.\n",
-      "This sudoku took 0.015625 seconds to solve.\n",
+      "This sudoku took 0.0 seconds to solve.\n",
       "\n",
       "This is easy sudoku number 12\n",
       "[[4 1 5 9 6 8 2 3 7]\n",
@@ -1206,7 +1210,7 @@
       " [4 5 3 1 7 8 2 6 9]]\n",
       "Is your solution correct?\n",
       "Yes! Correct solution.\n",
-      "This sudoku took 0.015625 seconds to solve.\n",
+      "This sudoku took 0.0 seconds to solve.\n",
       "\n",
       "This is medium sudoku number 7\n",
       "[[2 9 0 8 1 0 4 0 3]\n",
@@ -1230,7 +1234,7 @@
       " [3 8 4 7 5 1 2 9 6]]\n",
       "Is your solution correct?\n",
       "Yes! Correct solution.\n",
-      "This sudoku took 0.0 seconds to solve.\n",
+      "This sudoku took 0.015625 seconds to solve.\n",
       "\n",
       "This is medium sudoku number 8\n",
       "[[2 9 0 4 1 0 8 0 0]\n",
@@ -1496,7 +1500,7 @@
       " [3 8 5 4 9 6 7 2 1]]\n",
       "Is your solution correct?\n",
       "Yes! Correct solution.\n",
-      "This sudoku took 0.015625 seconds to solve.\n",
+      "This sudoku took 0.0 seconds to solve.\n",
       "\n",
       "This is hard sudoku number 4\n",
       "[[9 0 7 0 0 0 6 5 1]\n",
@@ -1520,7 +1524,7 @@
       " [2 1 9 3 5 7 4 6 8]]\n",
       "Is your solution correct?\n",
       "Yes! Correct solution.\n",
-      "This sudoku took 0.0 seconds to solve.\n",
+      "This sudoku took 0.015625 seconds to solve.\n",
       "\n",
       "This is hard sudoku number 5\n",
       "[[0 0 2 0 6 0 0 3 0]\n",
@@ -1664,7 +1668,7 @@
       " [3 6 1 5 9 2 7 8 4]]\n",
       "Is your solution correct?\n",
       "Yes! Correct solution.\n",
-      "This sudoku took 0.0 seconds to solve.\n",
+      "This sudoku took 0.015625 seconds to solve.\n",
       "\n",
       "This is hard sudoku number 11\n",
       "[[0 0 0 5 2 0 3 0 0]\n",
@@ -1688,7 +1692,7 @@
       " [8 6 3 1 9 5 7 4 2]]\n",
       "Is your solution correct?\n",
       "Yes! Correct solution.\n",
-      "This sudoku took 0.015625 seconds to solve.\n",
+      "This sudoku took 0.0 seconds to solve.\n",
       "\n",
       "This is hard sudoku number 12\n",
       "[[0 7 0 3 0 0 0 8 0]\n",
@@ -1760,7 +1764,7 @@
       " [-1 -1 -1 -1 -1 -1 -1 -1 -1]]\n",
       "Is your solution correct?\n",
       "Yes! Correct solution.\n",
-      "This sudoku took 0.0625 seconds to solve.\n",
+      "This sudoku took 0.03125 seconds to solve.\n",
       "\n",
       "15/15 hard sudokus correct\n"
      ]
